# api/openapi.yaml
@@ -176,11 +176,8 @@ components:
     UpdateAgentRequest:
       type: object
       required:
-        - artifact_source
         - artifact_version
       properties:
-        artifact_source:
-          type: string
         artifact_version:
           type: string
     UpdateAgentResponse:
@@ -252,7 +249,7 @@ paths:
             schema:
               $ref: "#/components/schemas/UpdateAgentRequest"
       responses:
-        "200":
+        "202":
           description: OK
           content:
             application/json:
